# olympus-xmp

./: COPYRIGHT  Cargo.toml  LICENSE  README.md  build.rs
workspace/: Cargo.toml
workspace/.cargo/vendored-sources/calamine-0.18.0/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/codepage-0.1.1/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/email-address-parser-1.0.3/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/email_address-0.2.1/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/gcd-2.1.0/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/quick-xml-0.19.0/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/swiss-army-knife-0.0.31/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/swiss-army-knife-0.0.32/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/swiss-army-knife-0.0.33/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/swiss-army-knife-0.0.36/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/swiss-army-knife-0.0.37/: .cargo-checksum.json  Cargo.toml
workspace/.cargo/vendored-sources/unroll-0.1.5/: .cargo-checksum.json  Cargo.toml  README.md
workspace/ietf-bcp-47-language-tag/: Cargo.toml  README.md
workspace/ietf-bcp-47-language-tag-database/: Cargo.toml  README.md
workspace/ietf-bcp-47-language-tag-database/src/: LanguageSubtagRegistryFileContentsParseError.rs  language_subtag_registry.rs  lib.rs  parse_language_subtag_registry.rs
workspace/ietf-bcp-47-language-tag-database/src/date/: Date.rs  DateParseError.rs  DayOfMonth.rs  Month.rs  Year.rs
workspace/ietf-bcp-47-language-tag-database/src/parser/: Event.rs  PullEventParserError.rs  UnfoldedLinesIterator.rs  mod.rs
workspace/ietf-bcp-47-language-tag-database/src/records/: ExtlangRecord.rs  FieldError.rs  FieldNotPermittedError.rs  FieldParseError.rs  GrandfatheredRecord.rs  KeyParseError.rs  LanguageRecord.rs  LanguageSubtag.rs  MissingFieldError.rs  Record.rs  RecordParseError.rs  Records.rs  RecordsFileHeaderParseError.rs  RedundantRecord.rs  RegionRecord.rs  RegionSubtag.rs  Scope.rs  ScriptRecord.rs  TagOrSubtagRangeError.rs  Type.rs  UnknownStringVariantError.rs  VariantRecord.rs  mod.rs
workspace/ietf-bcp-47-language-tag/src/: Bcp47LanguageTag.rs  Extension.rs  ExtensionPortion.rs  IanaRegisteredIso15924ScriptCode.rs  IanaRegisteredIso3166Dash1Alpha2CountryCode.rs  IanaRegisteredIso639Alpha2Code.rs  IanaRegisteredIso639Alpha3Code.rs  IanaRegisteredIso639Code.rs  IanaRegisteredRegionCode.rs  IanaRegisteredUnM49RegionCode.rs  IetfBcp47LanguageTag.rs  LanguageExtension.rs  Normal.rs  OneWithOptionalSuffixes.rs  OrdinaryLanguage.rs  PrivateUse.rs  PrivateUsePortion.rs  RegisteredLanguageSubtag.rs  RegularGrandfathered.rs  ReservedLanguageSubtag.rs  Variant.rs  build.rs  lib.rs
workspace/ietf-bcp-47-language-tag/src/parser/: Bcp47LanguageTagParseError.rs  ExtensionParseError.rs  IetfBcp47LanguageTagParseError.rs  LanguageSubtagParseError.rs  MemchrIterator.rs  PrivateUseSubtagsParseError.rs  RegionParseError.rs  UninitialisedArray.rs  VariantParseError.rs  array_vec_u8.rs  mod.rs
workspace/ietf-bcp-47-language-tag/src/restricted_byte/: Alpha.rs  Alphanumeric.rs  Digit.rs  InvalidAlphaError.rs  InvalidAlphanumericError.rs  InvalidDigitError.rs  InvalidSingletonError.rs  InvalidUpperCaseAlphaError.rs  RestrictedByte.rs  RestrictedByteConst.rs  Singleton.rs  UpperCaseAlpha.rs  mod.rs  new_array_unchecked.rs  new_array_unchecked_ref.rs  new_array_unchecked_validation.rs
workspace/internationalized-resource-identifier/: Cargo.toml  README.md
workspace/internationalized-resource-identifier/src/: AbsoluteInternationalizedResourceIdentifier.rs  AbsoluteInternationalizedResourceIdentifierStringParseError.rs  Authority.rs  AuthorityParseError.rs  GetUncheckedExt.rs  HashFragment.rs  Hierarchy.rs  HierarchyParseError.rs  Host.rs  HostName.rs  HostNameParseError.rs  HostParseError.rs  MoreThanOneError.rs  ParseNextAfterHierarchy.rs  PercentEncodable.rs  Query.rs  Scheme.rs  UserInformation.rs  UserInformationParseError.rs  lib.rs
workspace/internationalized-resource-identifier/src/chars/: mod.rs  x00A0.rs  x07FF.rs  x0800.rs  x100000.rs  x10FFFD.rs  x1FFFD.rs  x20000.rs  x2FFFD.rs  x30000.rs  x40000.rs  x4FFFD.rs  x6FFFD.rs  x70000.rs  x90000.rs  xAFFFD.rs  xB0000.rs  xE000.rs  xE1000.rs  xF8FF.rs  xFDF0.rs  xFFEF.rs  xFFFFD.rs
workspace/internationalized-resource-identifier/src/internet_protocol_version_4_address/: InternetProtocolVersion4AddressOctetLength2ParseError.rs  mod.rs  (+1 more)
workspace/iso-3166-1-country/: Cargo.toml  README.md
workspace/iso-3166-1-country/src/: Iso3166Dash1Alpha2CountryCode.rs  Iso3166Dash1Alpha3CountryCode.rs  Iso3166Dash1AlphaCountryCode.rs  Iso3166Dash1Country.rs  UnknownStringVariantParseError.rs  build.rs  letter_to_number_scaled.rs  letter_to_number_unchecked.rs  lib.rs
workspace/n-triples/: Cargo.toml  README.md
workspace/n-triples/src/: BlankNodeLabel.rs  FromUnchecked.rs  GetStringPredicateError.rs  IRI.rs  NTriples.rs  NaiveIetfBcp47LanguageTag.rs  NonEmptyVec.rs  Objects.rs  PathDepth.rs  Predicate.rs  Predicates.rs  RawIetfBcp47LanguageTag.rs  Subject.rs  char.constants.rs  lib.rs  u8.constants.rs
workspace/olympus-xmp/: Cargo.toml  build.rs
workspace/olympus-xmp/src/: lib.rs  main.rs
workspace/un-series-m-nº49-data/: Cargo.toml  README.md
workspace/un-series-m-nº49-data/src/: Constituents.rs  Developing.rs  Iso3166Dash1Alpha2Code.rs  Iso3166Dash1Alpha3Code.rs  M49Code.rs  NamesInEnglishAndFrench.rs  NamesInUnitedNationsOfficialLanguages.rs  StaticArabicName.rs  StaticChineseName.rs  StaticConstituents.rs  StaticEnglishName.rs  StaticFrenchName.rs  StaticIso3166Dash1Alpha2Code.rs  StaticIso3166Dash1Alpha3Code.rs  StaticM49Code.rs  StaticName.rs  StaticRussianName.rs  StaticSpanishName.rs  TODO.CountryOld.rs  TODO.CustomsAreas.rs  TODO.main.rs  TODO.model.rs  UnitedNationsOfficialLanguage.rs  build.rs  include_generated_file.rs  lib.rs
(+779 files in other folders)
