# This file is part of olympus-xmp. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/olympus-xmp/master/COPYRIGHT. No part of olympus-xmp, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2022 The developers of olympus-xmp. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/olympus-xmp/master/COPYRIGHT.


[package]
name = "ietf-bcp-47-language-tag"
description = "IETF BCP 47 language tag"
keywords = ["ietf", "bcp", "47", "language", "database"]
categories = []
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/olympus-xmp"
repository = "https://github.com/lemonrock/olympus-xmp.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
build = "src/build.rs"
publish = false
edition = '2021'
version = "0.0.0"

[build-dependencies]
ietf-bcp-47-language-tag-database = { version = "^0.0.0", path = "../ietf-bcp-47-language-tag-database" }

[dependencies]
arrayvec = { version = "0.7.0", features = ["std", "serde"] }
either = { version = "1.6.1", features = ["use_std", "serde"] }
unroll = "0.1.5"
memchr = "2.4.1"
swiss-army-knife = "^0.0.33"
