# This file is part of olympus-xmp. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/olympus-xmp/master/COPYRIGHT. No part of olympus-xmp, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2022 The developers of olympus-xmp. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/olympus-xmp/master/COPYRIGHT.


[package]
name = "internationalized-resource-identifier"
description = "Internationalized Resource Identifier (IRI) and URI parser; highly efficient with mimimal memory allocation from heap"
keywords = ["IRI", "URI", "parser"]
categories = []
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/raphaelcohn/internationalized-resource-identifier"
repository = "https://github.com/raphaelcohn/olympus-xmp.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
edition = '2021'
version = "0.0.0"

[dependencies]
swiss-army-knife = { version = "^0.0.38", path = "/Users/raph/Documents/repositories/lemonrock/linux-support/workspace/swiss-army-knife" }
