# This file is part of olympus-xmp. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/olympus-xmp/master/COPYRIGHT. No part of olympus-xmp, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2022 The developers of olympus-xmp. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/olympus-xmp/master/COPYRIGHT.


[package]
name = "un-series-m-nº49-data"
description = "UN Series M Nº49 data"
keywords = ["UN", "Series", "M49", "database"]
categories = []
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/olympus-xmp"
repository = "https://github.com/lemonrock/olympus-xmp.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
edition = '2021'
version = "0.0.0"
build = "src/build.rs"

[build-dependencies]
#calamine = "0.18.0"
n-triples = { version = "0.0.0", path = "../n-triples" }
json = "0.12.4"
swiss-army-knife = "^0.0.37"

[dependencies]
memchr = "2.4.1"
swiss-army-knife = "^0.0.37"
